--- a/templates/signup.ejs
+++ b/templates/signup.ejs
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-    <h2>Log In</h2>
+    <h2>Signup</h2>
 
-    <form action="/login" method="post">
+    <form action="/signup" method="post">
 
     <input type="text" name="name" placeholder="name">
     <input type="password" name="password" placeholder="Password">
