--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-
-    <h1>home</h1>
+    <h1>Hello  <%= name %> </h1>
+    <a href="/"> Logout </a>
    
 </body>
 </html>
