api fetch call and display fitbit information

--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -6,7 +6,9 @@
     <title>myFitTracker</title>
 </head>
 <body>
-    <h1>Hello  <%= name %> </h1>
+    <h1>Hello  <%= user.fullName %> </h1>
+    <h1>Average Daily Steps  <%= user.averageDailySteps %> </h1>
+    <h1>Average Running Stride Length <%= user.strideLengthRunning %> </h1>
     <a href="/"> Logout </a>
    
 </body>
