--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>myFitTracker</title>
+    <link rel="icon" type="image/x-ico" href="/images/dumbell_icon.png">
 </head>
 <body>
     <h1>Hello  <%= user.fullName %> </h1>
