retreive heart rate data

--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -17,6 +17,7 @@
     </div>
 
     <div id="dashboard">
+        <h1>Resting Heart rate  <%= heartrate %> </h1>
         <h1>Average Daily Steps  <%= user.averageDailySteps %> </h1>
         <h1>Average Running Stride Length <%= user.strideLengthRunning %> </h1>
     </div>
