--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -20,6 +20,9 @@
         <h1>Resting Heart rate  <%= heartrate %> </h1>
         <h1>Average Daily Steps  <%= user.averageDailySteps %> </h1>
         <h1>Average Running Stride Length <%= user.strideLengthRunning %> </h1>
+        <div id = "chart">
+            <canvas id="myChart"></canvas>
+        </div>
     </div>
 
     <script>
@@ -33,6 +36,31 @@
             document.body.appendChild(form);
             form.submit();
         }
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <script>
+        const ctx = document.getElementById('myChart');
+      
+        new Chart(ctx, {
+          type: 'bar',
+          data: {
+            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+            datasets: [{
+              label: '# of Votes',
+              data: [12, 19, 3, 5, 2, 3],
+              borderWidth: 1
+            }]
+          },
+          options: {
+            scales: {
+              y: {
+                beginAtZero: true
+              }
+            }
+          }
+        });
     </script>
    
 </body>
