fix getSleep fetch call

--- a/public/home.css
+++ b/public/home.css
@@ -70,7 +70,7 @@ button{
     margin-top: 20px; /* Add some margin to avoid overlapping */
 }
 
-#myChart {
+#heartChart {
     background-color: #f8f8f8;
     width: 50% !important; /* Ensure canvas takes full width */
     height: 100% !important; /* Ensure canvas takes full height */
