add sleepTimes to home.ejs

--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -19,6 +19,7 @@
     <div id="dashboard">
         <h1>Testing: <%= JSON.stringify(dateTimes) %> </h1>
         <h1>Testing: "<%= JSON.stringify(restingHeartRates) %>" </h1>
+        <h1>Testing: "<%= sleepTimes %>" </h1>
         <h1>Average Daily Steps  <%= user.averageDailySteps %> </h1>
         <h1>Average Running Stride Length <%= user.strideLengthRunning %> </h1>
         <div id = "chart">
