--- a/public/home.css
+++ b/public/home.css
@@ -75,3 +75,9 @@ button{
     width: 50% !important; /* Ensure canvas takes full width */
     height: 100% !important; /* Ensure canvas takes full height */
 }
+
+#sleepChart {
+    background-color: #f8f8f8;
+    width: 50% !important; /* Ensure canvas takes full width */
+    height: 100% !important; /* Ensure canvas takes full height */
+}
