--- a/public/heart.css
+++ b/public/heart.css
@@ -7,6 +7,7 @@ html, body {
 body {
     display: flex;
     flex-direction: column;
+    background-color: #343434;
 }
 
 #header {
@@ -58,12 +59,7 @@ button{
     flex: 1;
 }
 
-#chart{
-    display: flex;
-    flex-direction: column;
-}
-
-#topChart, #bottomChart {
+#chart {
     padding: 20px; /* Optional padding */
     box-sizing: border-box; /* Ensures padding doesn't affect size */
     width: 100%; /* Make the chart container take the full width */
@@ -81,14 +77,13 @@ button{
     height: 100% !important; /* Ensure canvas takes full height */
 }
 
-#sleepChart {
-    background-color: #f8f8f8;
-    width: 50% !important;
-    height: 100% !important;
-}
-
-#stepChart {
-    background-color: #f8f8f8;
-    width: 50% !important;
-    height: 100% !important;
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    padding: 10px 0; 
+    font-family: "Poppins", sans-serif;
+    color: white;
+    font-size: medium;
 }
