--- a/public/home.css
+++ b/public/home.css
@@ -54,41 +54,43 @@ button{
 #dashboard{
     color: #f8f8f8;
     background-color: #343434;
-    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
     flex: 1;
 }
 
-#chart{
+#heartLink {
+    font-size: 24px;
+    color: #000;
+    text-decoration: none;
     display: flex;
     flex-direction: column;
-}
-
-#topChart, #bottomChart {
-    padding: 20px; /* Optional padding */
-    box-sizing: border-box; /* Ensures padding doesn't affect size */
-    width: 100%; /* Make the chart container take the full width */
-    height: 400px; /* Set a fixed height for the chart */
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
     align-items: center;
-    margin-top: 20px; /* Add some margin to avoid overlapping */
 }
 
-#heartChart {
-    background-color: #f8f8f8;
-    width: 50% !important; /* Ensure canvas takes full width */
-    height: 100% !important; /* Ensure canvas takes full height */
+#heartLink:hover {
+    color: white;
 }
 
-#sleepChart {
-    background-color: #f8f8f8;
-    width: 50% !important;
-    height: 100% !important;
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    padding: 10px 0; 
+    font-family: "Poppins", sans-serif;
+    font-size: medium;
+    text-decoration: none;
+    color: white;
 }
 
-#stepChart {
-    background-color: #f8f8f8;
-    width: 50% !important;
-    height: 100% !important;
+.footer-link {
+    color: white;
+    text-decoration: none;
+}
+
+.footer-link:hover {
+    text-decoration: underline;
 }
