--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -22,16 +22,12 @@
         <h1>Testing: "<%= JSON.stringify(sleepTimes) %>" </h1>
         <h1>Testing: "<%= JSON.stringify(stepTimes) %>" </h1>
         <h1>Average Daily Steps  <%= user.averageDailySteps %> </h1> -->
-        <a href="/heart"> View Heart Data</a>
-        <!-- <div id = "chart">
-          <div id = "topChart">
-              <canvas id="heartChart"></canvas>
-              <canvas id="sleepChart"></canvas>
-          </div>
-          <div id = "bottomChart">
-            <canvas id="stepChart"></canvas>
-          </div>
-        </div> -->
+        <div id="heart">
+          <a href="/heart" id="heartLink">
+            <img src="/images/heart.png" alt="Heart PNG">
+            <span>View Heart Data</span>
+          </a>
+        </div>
     </div>
 
     <script>
@@ -47,91 +43,9 @@
         }
     </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<footer>
+  <a href="https://github.com/1shman" target="_blank" class="footer-link"><p>Personal project coded by Ishraq Rahman</p></a>
+</footer>
 
-    <script>
-        const heartCtx = document.getElementById('heartChart').getContext('2d');
-        const sleepCtx = document.getElementById('sleepChart').getContext('2d');
-        const stepCtx = document.getElementById('stepChart').getContext('2d');
-        
-
-        const xaxis = <%- JSON.stringify(dateTimes) %>;
-        const yaxis = <%- JSON.stringify(restingHeartRates) %>;
-        const yaxisSleep = <%- JSON.stringify(sleepTimes) %>;
-        const yaxisStep = <%- JSON.stringify(stepTimes) %>;
-      
-        new Chart(heartCtx, {
-          type: 'line',
-          data: {
-            labels: xaxis,
-            datasets: [{
-              label: 'Average Resting Heart Rate',
-              data: yaxis,
-              borderColor: 'rgba(75, 192, 192, 1)',
-              backgroundColor: 'rgba(75, 192, 192, 0.2)',
-              borderWidth: 1,
-              fill: true
-            }]
-          },
-          options: {
-            scales: {
-              y: {
-                beginAtZero: false
-              }
-            },
-            responsive: true,
-            maintainAspectRatio: false
-          }
-        });
-
-        new Chart(sleepCtx, {
-          type: 'line',
-          data: {
-            labels: xaxis,
-            datasets: [{
-              label: 'Sleep Times',
-              data: yaxisSleep,
-              borderColor: 'rgba(153, 102, 255, 1)',
-              backgroundColor: 'rgba(153, 102, 255, 0.2)',
-              borderWidth: 1,
-              fill: true
-            }]
-          },
-          options: {
-            scales: {
-              y: {
-                beginAtZero: false
-              }
-            },
-            responsive: true,
-            maintainAspectRatio: false
-          }
-        });
-
-        new Chart(stepCtx, {
-          type: 'line',
-          data: {
-            labels: xaxis,
-            datasets: [{
-              label: 'Sleep Times',
-              data: yaxisStep,
-              borderColor: 'rgba(153, 102, 255, 1)',
-              backgroundColor: 'rgba(153, 102, 255, 0.2)',
-              borderWidth: 1,
-              fill: true
-            }]
-          },
-          options: {
-            scales: {
-              y: {
-                beginAtZero: false
-              }
-            },
-            responsive: true,
-            maintainAspectRatio: false
-          }
-        });
-    </script>
-   
 </body>
 </html>
