add sleep and step links to home.ejs + styling

--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -22,10 +22,23 @@
         <h1>Testing: "<%= JSON.stringify(sleepTimes) %>" </h1>
         <h1>Testing: "<%= JSON.stringify(stepTimes) %>" </h1>
         <h1>Average Daily Steps  <%= user.averageDailySteps %> </h1> -->
+        
         <div id="heart">
           <a href="/heart" id="heartLink">
             <img src="/images/heart.png" alt="Heart PNG">
             <span>View Heart Data</span>
+          </a>
+        </div>
+        <div id="sleep">
+          <a href="/sleep" id="sleepLink">
+            <img src="/images/sleep.png" alt="Sleep PNG">
+            <span>View Sleep Data</span>
+          </a>
+        </div>
+        <div id="step">
+          <a href="/step" id="stepLink">
+            <img src="/images/step.png" alt="Step PNG">
+            <span>View Step Data</span>
           </a>
         </div>
     </div>
