--- a/public/home.css
+++ b/public/home.css
@@ -66,7 +66,7 @@ button{
     flex: 1;
 }
 
-#heartLink {
+#heartLink, #sleepLink, #stepLink{
     font-size: 24px;
     color: #000;
     text-decoration: none;
@@ -75,8 +75,13 @@ button{
     align-items: center;
 }
 
-#heartLink:hover {
+#heartLink:hover, #sleepLink:hover, #stepLink:hover{
     color: white;
+}
+
+#dashboard a img{
+    width: 350px;
+    height: 250px; 
 }
 
 footer {
