remove testing output

--- a/templates/sleep.ejs
+++ b/templates/sleep.ejs
@@ -19,8 +19,8 @@
 
 
     <div id ="dashboard"> 
-        <h1>Testing: <%= JSON.stringify(dateTimes) %> </h1>
-        <h1>Testing: "<%= JSON.stringify(sleepTimes) %>" </h1>
+        <!-- <h1>Testing: <%= JSON.stringify(dateTimes) %> </h1>
+        <h1>Testing: "<%= JSON.stringify(sleepTimes) %>" </h1> -->
         <div id = "chart">
             <canvas id="canvasChart"></canvas>
         </div>
