--- a/templates/heart.ejs
+++ b/templates/heart.ejs
@@ -19,8 +19,8 @@
 
 
     <div id ="dashboard"> 
-      <h1>Testing: <%= JSON.stringify(dateTimes) %> </h1>
-      <h1>Testing: "<%= JSON.stringify(restingHeartRates) %>" </h1>
+      <!-- <h1>Testing: <%= JSON.stringify(dateTimes) %> </h1>
+      <h1>Testing: "<%= JSON.stringify(restingHeartRates) %>" </h1> -->
       <div id = "chart">
           <canvas id="canvasChart"></canvas>
       </div>
