--- a/templates/heart.ejs
+++ b/templates/heart.ejs
@@ -76,7 +76,7 @@
 </body>
 
 <footer>
-    <p>Personal project coded by <a href="https://github.com/1shman" target="_blank">Ishraq Rahman</a></p>
+  <a href="https://github.com/1shman" target="_blank" class="footer-link"><p>Personal project coded by Ishraq Rahman</p></a>
 </footer>
     
 </html>
