--- a/public/home.css
+++ b/public/home.css
@@ -64,11 +64,12 @@ button{
     flex-direction: row;
     align-items: center;
     flex: 1;
+    
 }
 
 #heartLink, #sleepLink, #stepLink{
     font-size: 24px;
-    color: #000;
+    color: white;
     text-decoration: none;
     display: flex;
     flex-direction: column;
@@ -76,7 +77,7 @@ button{
 }
 
 #heartLink:hover, #sleepLink:hover, #stepLink:hover{
-    color: white;
+    color: #f54785;
 }
 
 #dashboard a img{
@@ -104,4 +105,5 @@ footer {
 
 .footer-link:hover {
     text-decoration: underline;
+    color: #f54785;
 }
