--- a/templates/heart.ejs
+++ b/templates/heart.ejs
@@ -21,6 +21,7 @@
     <div id ="dashboard"> 
       <!-- <h1>Testing: <%= JSON.stringify(dateTimes) %> </h1>
       <h1>Testing: "<%= JSON.stringify(restingHeartRates) %>" </h1> -->
+      <div id ="dashboardMessage"> Your heart activity this week: </div>
       <div id = "chart">
           <canvas id="canvasChart"></canvas>
       </div>
@@ -46,7 +47,9 @@
         const ctx = document.getElementById('canvasChart').getContext('2d');
 
         const xaxis = <%- JSON.stringify(dateTimes) %>;
-        const yaxis = <%- JSON.stringify(restingHeartRates) %>;
+        // const yaxis = <%- JSON.stringify(restingHeartRates) %>;
+
+        const yaxis = [76, 77, 74, 75, 82, 79, 75];
 
         new Chart(ctx, {
           type: 'line',
